[gd_scene load_steps=7 format=2]

[ext_resource path="res://DesktopIconSpaceInvaders.gd" type="Script" id=1]
[ext_resource path="res://spaceship.png" type="Texture" id=2]
[ext_resource path="res://playerSpaceInvader.tscn" type="PackedScene" id=3]
[ext_resource path="res://wallSpaceInvaders.tscn" type="PackedScene" id=4]
[ext_resource path="res://alienSpaceInvader.tscn" type="PackedScene" id=5]
[ext_resource path="res://SpaceInvaders.gd" type="Script" id=6]

[node name="Node2D" type="Node2D"]

[node name="SpaceInvadersContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="SpaceInvadersContainer"]
margin_right = 96.0
margin_bottom = 64.0
texture = ExtResource( 2 )
stretch_mode = 6
script = ExtResource( 1 )
idle_texture = ExtResource( 2 )
hover_texture = ExtResource( 2 )

[node name="SpaceInvaders" type="WindowDialog" parent="SpaceInvadersContainer/TextureRect"]
visible = true
margin_left = 462.0
margin_top = 215.0
margin_right = 962.0
margin_bottom = 550.0
popup_exclusive = true
window_title = "Pop Up"
resizable = true
script = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="SpaceInvadersContainer/TextureRect/SpaceInvaders"]
margin_right = 500.0
margin_bottom = 335.0
color = Color( 0, 0, 0, 1 )

[node name="Wall" parent="SpaceInvadersContainer/TextureRect/SpaceInvaders" instance=ExtResource( 4 )]
position = Vector2( 506, 329 )

[node name="Wall2" parent="SpaceInvadersContainer/TextureRect/SpaceInvaders" instance=ExtResource( 4 )]
position = Vector2( -6, 329 )

[node name="Player" parent="SpaceInvadersContainer/TextureRect/SpaceInvaders" instance=ExtResource( 3 )]
position = Vector2( 242, 313 )

[node name="Wall3" parent="SpaceInvadersContainer/TextureRect/SpaceInvaders" instance=ExtResource( 4 )]
position = Vector2( 250, -7 )
scale = Vector2( 25, 1 )

[node name="Wall4" parent="SpaceInvadersContainer/TextureRect/SpaceInvaders" instance=ExtResource( 4 )]
position = Vector2( 250, 345 )
scale = Vector2( 25, 1 )

[node name="Alien" parent="SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 5 )]
position = Vector2( 26, 25 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien2" parent="SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 5 )]
position = Vector2( 66, 25 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien3" parent="SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 5 )]
position = Vector2( 106, 25 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien4" parent="SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 5 )]
position = Vector2( 146, 25 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien5" parent="SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 5 )]
position = Vector2( 186, 25 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien6" parent="SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 5 )]
position = Vector2( 226, 25 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien7" parent="SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 5 )]
position = Vector2( 266, 25 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien8" parent="SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 5 )]
position = Vector2( 306, 25 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien9" parent="SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 5 )]
position = Vector2( 346, 25 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien10" parent="SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 5 )]
position = Vector2( 386, 25 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien11" parent="SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 5 )]
position = Vector2( 426, 25 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien12" parent="SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 5 )]
position = Vector2( 466, 25 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien13" parent="SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 5 )]
position = Vector2( 26, 65 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien14" parent="SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 5 )]
position = Vector2( 66, 65 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien15" parent="SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 5 )]
position = Vector2( 106, 65 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien16" parent="SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 5 )]
position = Vector2( 146, 65 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien17" parent="SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 5 )]
position = Vector2( 186, 65 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien18" parent="SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 5 )]
position = Vector2( 226, 65 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien19" parent="SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 5 )]
position = Vector2( 266, 65 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien20" parent="SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 5 )]
position = Vector2( 306, 65 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien21" parent="SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 5 )]
position = Vector2( 346, 65 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien22" parent="SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 5 )]
position = Vector2( 386, 65 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien23" parent="SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 5 )]
position = Vector2( 426, 65 )
scale = Vector2( 0.5, 0.5 )

[node name="Alien24" parent="SpaceInvadersContainer/TextureRect/SpaceInvaders" groups=["Aliens"] instance=ExtResource( 5 )]
position = Vector2( 466, 65 )
scale = Vector2( 0.5, 0.5 )

[node name="Label" type="Label" parent="SpaceInvadersContainer"]
margin_top = 68.0
margin_right = 96.0
margin_bottom = 82.0
text = "Space Invaders"
align = 1

[connection signal="mouse_entered" from="SpaceInvadersContainer/TextureRect" to="SpaceInvadersContainer/TextureRect" method="_on_TextureRect_mouse_entered"]
[connection signal="mouse_exited" from="SpaceInvadersContainer/TextureRect" to="SpaceInvadersContainer/TextureRect" method="_on_TextureRect_mouse_exited"]
[connection signal="popup_hide" from="SpaceInvadersContainer/TextureRect/SpaceInvaders" to="SpaceInvadersContainer/TextureRect" method="_on_SpaceInvaders_popup_hide"]
